--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
 appdirs==1.4.3
+defusedxml==0.5.0
 Django==1.10.6
+oauthlib==2.0.2
 packaging==16.8
 psycopg2==2.7.1
+PyJWT==1.4.2
 pyparsing==2.2.0
+python3-openid==3.1.0
+requests==2.13.0
+requests-oauthlib==0.8.0
 six==1.10.0
+social-auth-app-django==1.1.0
+social-auth-core==1.2.0
